# teo-trajectory-generation

./: CMakeLists.txt  README.md
cmake/: CMakeLists.txt  TEO_TRAJECTORY_GENERATIONDescribe.cmake  TEO_TRAJECTORY_GENERATIONOptions.cmake  TEO_TRAJECTORY_GENERATIONPackage.cmake  TEO_TRAJECTORY_GENERATIONVersion.cmake
programs/: CMakeLists.txt
programs/TrajectoryGeneration/: CMakeLists.txt  TrajectoryGeneration.cpp  TrajectoryGeneration.hpp  smoothPathFromCsvFile.py  trajectoryGeneration.ini
programs/TrajectoryGeneration/trajectories/: Right-arm-motion.csv  test-right-arm-motion-smooth.csv  test-right-arm-motion.csv
programs/exampleProgram/: CMakeLists.txt  main.cpp
scripts/admin/: update-dox.sh
scripts/gnome/: teo-trajectory_generation.desktop
share/: CMakeLists.txt
share/contexts/trajectoryGeneration/: TrajectoryGenerationTrunkAndLeftArm.ini  TrajectoryGenerationTrunkAndLeftArmSim.ini  TrajectoryGenerationTrunkAndRightArm.ini  TrajectoryGenerationTrunkAndRightArmSim.ini
