# Copyright: Universidad Carlos III de Madrid (C) 2022
# Authors: 
# CopyPolicy: Released under the terms of the 

### Go through single applications
#add_subdirectory(prog)
yarp_install(DIRECTORY contexts/trajectoryGeneration
             DESTINATION ${TEO-TRAJECTORY-GENERATION_CONTEXTS_INSTALL_DIR})